--- a/theme.css
+++ b/theme.css
@@ -15,7 +15,7 @@
     --overlay-bg-color: rgba(0, 0, 0, 0) !important;
 
     /*hutao.gif是左下角的动图， background-image.jpg是背景图片，自己替换，注意文件路径  */ 
-    background-image: url(/mnt/user/unraid-theme/hutao.gif),url(/mnt/user/unraid-theme/background-image.jpg);
+    background-image: url(./hutao.gif),url(./background-image.jpg);
     
     background-repeat: no-repeat , no-repeat;
     background-position: right bottom , center top;
